--- a/css/blocks/infrastructure.css
+++ b/css/blocks/infrastructure.css
@@ -18,6 +18,7 @@
 @media (width <= 500px) {
   .infrastructure__container {
     padding-bottom: 64px;
+    padding-top: 20px !important;
   }
 }
 
